CompiladorCpp/Parser/Parser.cs
using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;

using Lexical;
using SyntaxTree;
//using Semantic;
using Environment;

namespace Syntax
{
    public class Parser
    {
        #region variables
        public Token currentToken;
        public Lexer lex;

        public static Env entorno;
        public static Sentence funcionActual = null;
        public static Sentence cicloActual = null;
        public static Sentence main = null;
        #endregion

        #region constructores
        public Parser(string path)
        {
            lex = new Lexer(path);
            entorno = new Env(null);
        }
        #endregion

        #region funciones

        public void compile()
        {
            currentToken = lex.nextToken();
            Sentence programa = program();

            Console.WriteLine(programa.genCode() + "\n\n");
            programa.validarSemantica();
        }

        Sentence program()
        {
            Program programa = new Program();
            Sentence sentencias = global_sentence();
            programa.ProgramInit(sentencias);
            programa.main = main;

            match("\0");
            //return sentencias;
            return programa;
        }

        Sentence global_sentence()
        {
            switch(currentToken.Tipo)
            {
                case TokenType.STRING:
                case TokenType.BOOL:
                case TokenType.CHAR:
                case TokenType.FLOAT:
                case TokenType.INT:
                case TokenType.VOID:
                case TokenType.CONST:
                case TokenType.STRUCT:
                case TokenType.ENUM:
                    Sentence sentencia = sentence();
                    return global_sentenceP(sentencia);

                default:
                    throw new Exception("Global sentence exception! wtf!!! linea: " + Lexer.line + " columna: " + Lexer.column + " currentToken -> " + currentToken.Lexema);
            }
        }

        Sentence global_sentenceP(Sentence sentencia1)
        {
            switch(currentToken.Tipo)
            {
                case TokenType.STRING:
                case TokenType.BOOL:
                case TokenType.CHAR:
                case TokenType.FLOAT:
                case TokenType.INT:
                case TokenType.VOID:
                case TokenType.CONST:
                case TokenType.STRUCT:
                case TokenType.ENUM:
                    Sentence sentencia2 = sentence();
                    SentenceSenquence sentSequence = new SentenceSenquence(sentencia1, sentencia2);
                    return global_sentenceP(sentSequence);
                
                default:
                    return sentencia1;//null
            }
        }

        Sentence sentence()
        {
            try
            {
                switch (currentToken.Tipo)
                {
                    case TokenType.CONST:
                        return constant_declaration();                        

                    case TokenType.ENUM:
                        Sentence sentence = enum_declaration();
                        match(";");
                        return sentence;

                    case TokenType.STRUCT:
                        Sentence structDec = struct_declaration();
                        match(";");
                        return structDec;

                    case TokenType.STRING:
                    case TokenType.BOOL:
                    case TokenType.CHAR:
                    case TokenType.FLOAT:
                    case TokenType.INT:
                        return variable_declaration();                        

                    case TokenType.VOID:
                        string id = void_declaration();
                        return function_declaration(null, id);

                    default:
                        return null;
                }
            }
            catch (Exception ex)
            {
                throw new Exception(ex.ToString() + "|SENTENCE| Error en la declaracion de sentenceia linea:" + Lexer.line + " columna:" + Lexer.column);
            }
        }

        #region variable declaration

        Sentence variable_declaration()
        {
            Tipo tipoVariables = variable_type();//tipo basico para todas las variables, si hay mas

            //Tipo tipoVariable = tipoVariables;            
            string idVariable = direct_variable_declarator();
            Tipo tipoVariable = variable_array(tipoVariables);
            int tmp = 0;
            if (peek("("))
                return function_declaration(tipoVariable, idVariable);
            else
            {
                VariableSubDeclarator primerVariable = new VariableSubDeclarator(tipoVariable, idVariable);

                VariableDeclarator primerDeclaracionVariable = new VariableDeclarator(primerVariable, null);//todavia no hemos visto inicializadores

                VariableDeclarations variableDeclarations = variable_declarator(primerDeclaracionVariable, tipoVariables);//para las variables que siguen
                match(";");

                return variableDeclarations;
            }
        }

        Tipo variable_type()
        {
            switch (currentToken.Tipo)
            {
                case TokenType.STRING:
                    match(TokenType.STRING);
                    return new Cadena();
                
                case TokenType.BOOL:
                    match(TokenType.BOOL);
                    return new Booleano();
                
                case TokenType.CHAR:
                    match(TokenType.CHAR);
                    return new Caracter();
                
                case TokenType.FLOAT:
                    match(TokenType.FLOAT);
                    return new Flotante();

                case TokenType.INT:
                    match(TokenType.INT);
                    return new Entero();
                    
                default:
                    throw new Exception("Error en la declaracion de tipo linea: " + Lexer.line + " columna: " + Lexer.column + " currenttoken = " + currentToken.Lexema);
            }
        }

        string direct_variable_declarator()
        {
            string id = variable_name();
            
            /*if (peek("["))
                tipoVariable = variable_array(tipoVariable);*/

            return id;
        }

        string variable_name()
        {
            string id = currentToken.Lexema;
            match(TokenType.ID);
            return id;
        }

        Tipo variable_array(Tipo tipoArreglo)
        {
            if (peek("["))
            {
                match("["); 
                //Expr sizeExpr = expr();
                int sizeExpr = Int32.Parse(currentToken.Lexema);
                match(TokenType.INTEGER_LITERAL);
                match("]");

                Tipo tipoArreglo2 = variable_array(tipoArreglo);
                
                return new Arreglo(tipoArreglo2, sizeExpr);
            } else
                return tipoArreglo;//null
        }        

        #region variable_declarator

        VariableDeclarations variable_declarator(VariableDeclarator primerVariable, Tipo tipoVariables)
        {
            primerVariable.initialization = variable_initializer();//primer variable viene sin inicializador

            entorno.put(primerVariable.declaration.id, primerVariable.declaration.tipo);//tablasimbolos

            VariableDeclaration listaDeclaracionVariables = variable_declarators(primerVariable, tipoVariables);

            return new VariableDeclarations(listaDeclaracionVariables);
        }

        VariableDeclaration variable_declarators(VariableDeclaration beforeDeclaration, Tipo tipoVariables)
        {
            if (peek(","))
            {
                match(",");
                //Tipo tipoVariable = tipoVariables;                
                string idVariable = direct_variable_declarator();
                Tipo tipoVariable = variable_array(tipoVariables);
                Initializers init = variable_initializer();

                entorno.put(idVariable, tipoVariable);//tablasimbolos

                VariableSubDeclarator variableActual = new VariableSubDeclarator(tipoVariable, idVariable);                
                VariableDeclarator actualDeclaration = new VariableDeclarator(variableActual, init);
                VariableDeclarators variableDeclarators = new VariableDeclarators(beforeDeclaration, actualDeclaration);

                return variable_declarators(variableDeclarators, tipoVariables);
            }
            else
                return beforeDeclaration;//null
        }

        #endregion

        #region variable_initializer

        Initializers variable_initializer()
        {
            if (peek("="))
            {
                match("=");
                return initializer();
            }
            return null;
            //null
        }

        Initializers initializer()
        {
            if (peek("{"))
            {
                match("{");
                List<Initializers> varInitializerList = new List<Initializers>();
                VariableInitializerList varInitList = initializer_list(varInitializerList);
                match("}");

                return varInitList;
            }
            else
            {
                Expr expresion = OR_expr();
                VariableInitializer varInitializer = new VariableInitializer(expresion);
                
                return varInitializer;
            }
        }

        VariableInitializerList initializer_list(List<Initializers> initlist)
        {
            Initializers varInit = initializer();
            initlist.Add(varInit);

            initializer_listP(initlist);

            return new VariableInitializerList(initlist);
        }

        void initializer_listP(List<Initializers> initlist)
        {
            if (peek(","))
            {
                match(","); 
                Initializers varInit = initializer();
                initlist.Add(varInit);
                initializer_listP(initlist);
            }
            //null
        }

        #endregion

        #endregion

        #region functions ()

        Sentence function_declaration(Tipo retorno, string id)
        {
            Env savedEnv = entorno;
            entorno = new Env(entorno);
            match("(");
            List<Tipo> paramsTypeList = parameter_type_list();
            match(")");            

            FunctionDefinition funcDefinition = new FunctionDefinition();
            funcionActual = funcDefinition;
            
            Sentence compoundStmnt = function_definition();
            
            funcDefinition.init(id, retorno, compoundStmnt);
            entorno = savedEnv;

            //if (paramsTypeList != null)
            Funcion funcion = new Funcion(retorno, paramsTypeList);
            entorno.put(id, funcion);

            funcionActual = null;

            if (id == "main")
                main = funcDefinition;

            return funcDefinition;
        }

        #region parameters_type_list

        List<Tipo> parameter_type_list()
        {
            bool isConstant = declaration_specifer();
            Tipo tipo = parameter_type();

            if (tipo != null)
            {
                List<Tipo> paramsList = new List<Tipo>();

                bool isReference = reference();
                string id = parameter_name();
                Tipo tipoParam = variable_array(tipo);
                
                entorno.put(id, tipoParam);
                paramsList.Add(tipoParam);
                
                parameter_type_listP(paramsList);
                return paramsList;
            }
            else
                return new List<Tipo>();
        }

        bool declaration_specifer()
        {
            if (peek("const"))
            {
                match("const");
                return true;
            }
            else
                return false;//null  
        }

        Tipo parameter_type()
        {
            switch (currentToken.Tipo)
            {
                case TokenType.STRING:
                case TokenType.BOOL:
                case TokenType.CHAR:
                case TokenType.FLOAT:
                case TokenType.INT:
                    return variable_type();

                case TokenType.STRUCT:
                case TokenType.ENUM:
                    throw new NotImplementedException("Falta implementar strcuts y enums como parametros");

                default:
                    return null;//null
            }
        }

        bool reference()
        {
            if (peek("&"))
            {
                match("&");
                return true;
            }
            else
                return false;//null            
        }

        string parameter_name()
        {
            string parameterid = direct_variable_declarator();
            return parameterid;
        }

        void parameter_type_listP(List<Tipo> Parameters)
        {
            if (peek(","))
            {
                match(",");

                bool isConstant = declaration_specifer();
                Tipo actualType = parameter_type();
                bool isReference = reference();
                
                string id = parameter_name();
                Tipo actualParameter = variable_array(actualType);
                
                entorno.put(id, actualParameter);                
                Parameters.Add(actualParameter);
                
                parameter_type_listP(Parameters);
            }            
            //null   
        }

        #endregion

        #region function_definition
        
        Sentence function_definition()
        {
            return compound_statement();
        }

        Sentence compound_statement()
        {
            match("{");
            Sentence stList = statement_list();
            match("}");

            CompoundStatement cpStmt = new CompoundStatement(stList);
            return cpStmt;
        }

        Sentence statement_list()
        {
            Sentence stmnt = statement();

            return statement_listP(stmnt);
        }

        Sentence statement_listP(Sentence statement1)
        {
            switch (currentToken.Tipo)
            {
                case TokenType.STRING:
                case TokenType.BOOL:
                case TokenType.CHAR:
                case TokenType.FLOAT:
                case TokenType.INT:
                case TokenType.VOID:
                case TokenType.STRUCT:
                case TokenType.ID:

                case TokenType.DECREMENT:
                case TokenType.INCREMENT:

                case TokenType.IF:
                case TokenType.DO:
                case TokenType.WHILE:
                case TokenType.FOR:
                case TokenType.RETURN:
                case TokenType.BREAK:
                case TokenType.CONTINUE:
                    Sentence statement2 = statement();

                    StatementSequence statementList = new StatementSequence(statement1, statement2);
                    return statement_listP(statementList);

                default:
                    return statement1;//null
            }            
        }

        Sentence statement()
        {
            switch (currentToken.Tipo)
            {
                case TokenType.STRING:
                case TokenType.BOOL:
                case TokenType.CHAR:
                case TokenType.FLOAT:
                case TokenType.INT:                
                    Sentence decStmt = declaration_statement(); 
                    match(";");
                    return decStmt;

                case TokenType.STRUCT:
                    string strId = struct_declarator();
                    Tipo varRecord = entorno.get(strId);
                    string strVarName = currentToken.Lexema;
                    match(TokenType.ID);
                    entorno.put(strVarName, varRecord);
                    StructVariableDeclaration strVarDec = new StructVariableDeclaration(strId, strVarName, varRecord);
                    match(";");
                    return strVarDec;

                case TokenType.DECREMENT:
                case TokenType.INCREMENT:
                case TokenType.ID:
                    Sentence expStmt = expression_statement();
                    match(";");
                    return expStmt;

                case TokenType.IF:
                    return if_statement();

                case TokenType.DO:
                    return do_while();

                case TokenType.WHILE:
                    return while_statement();

                case TokenType.FOR:
                    return for_statement();

                case TokenType.BREAK:
                    Sentence brkStmnt = break_statement(); 
                    match(";");
                    return brkStmnt;

                case TokenType.CONTINUE:
                    Sentence contStmnt = continue_statement(); 
                    match(";");
                    return contStmnt;

                case TokenType.RETURN:
                    Sentence ret = return_statement(); 
                    match(";");
                    return ret;
                
                default:
                    return null;
            }
            //null
        }

        Sentence declaration_statement()
        {
            Tipo tipoVariables = variable_type();//tipo basico para todas las variables, si hay mas

            //Tipo tipoVariable = tipoVariables;            
            string idVariable = direct_variable_declarator();
            Tipo tipoVariable = variable_array(tipoVariables);
            
            VariableSubDeclarator primerVariable = new VariableSubDeclarator(tipoVariable, idVariable);

            VariableDeclarator primerDeclaracionVariable = new VariableDeclarator(primerVariable, null);//todavia no hemos visto inicializadores

            VariableDeclarations variableDeclarations = variable_declarator(primerDeclaracionVariable, tipoVariables);//para las variables que siguen            

            return variableDeclarations;
        }        
        
        #region expression_statement

        Sentence expression_statement()
        {
            Expr expresion = expr();            
            ExpressionStatement exprStatement = new ExpressionStatement(expresion);
            return exprStatement;
        }
        
        #endregion

        #region if_statement

        Sentence if_statement()
        {
            Env savedEnv = entorno;
            entorno = new Env(entorno);
            match("if"); 
            match("(");
            Expr expresion = expr();           
            match(")");
            Sentence trueBlock = if_compound_statement();

            entorno = savedEnv;
            return elseif_(expresion, trueBlock);
        }

        Sentence if_compound_statement()
        {
            if (peek("{"))
                return compound_statement();            
            else
                return statement();
        }

        Sentence elseif_(Expr condicion, Sentence trueBlock)
        {
            if (peek("else"))
            {
                Env savedEnv = entorno;
                entorno = new Env(entorno);
                match("else");

                Sentence falseBLock = elseif_P(condicion, trueBlock);
                entorno = savedEnv;
                return new IfElseStatement(condicion, trueBlock, falseBLock);                
            }
            else
                return new IfStatement(condicion, trueBlock);
        }

        Sentence elseif_P(Expr condicion, Sentence trueBlock)
        {
            if (peek("if"))
                return if_statement();
            else
                return if_compound_statement();
        }

        #endregion

        #region return, continue, break statements

        Sentence return_statement()
        {
            match("return");
            Sentence expresion = return_statementP();

            ReturnStatement returnStmnt = new ReturnStatement(expresion);
            funcionActual = null;
            return returnStmnt;
        }

        Sentence return_statementP()
        {
            switch (currentToken.Tipo)
            {
                case TokenType.INCREMENT:
                case TokenType.DECREMENT:
                case TokenType.ID:
                case TokenType.REAL_LITERAL:
                case TokenType.INTEGER_LITERAL:
                case TokenType.LEFT_PARENTHESIS:
                    Sentence expresion = expression_statement();
                    return expresion;

                default:
                    return null;
            }
            //null
        }

        Sentence break_statement()
        {
            match("break");
            return new BreakStatement();
        }

        Sentence continue_statement()
        {
            match("continue"); 
            return new ContinueStatement();
        }

        #endregion

        #region while_statement

        Sentence while_statement()
        {
            Env savedEnv = entorno;
            entorno = new Env(entorno);

            WhileStatement whileStmnt = new WhileStatement();
            Sentence cicloAnterior = cicloActual;
            cicloActual = whileStmnt;

            match("while");
            match("(");
            Expr expresion = expr();
            match(")");
            Sentence ifCpStmnt = if_compound_statement();
            
            whileStmnt.WhileInit(expresion, ifCpStmnt);
            cicloActual = cicloAnterior;

            entorno = savedEnv;
            return whileStmnt;
        }

        #endregion

        #region do while

        Sentence do_while()
        {
            Env savedEnv = entorno;
            entorno = new Env(entorno);

            DoWhileStatement doWhileStmnt = new DoWhileStatement();
            Sentence cicloAnterior = cicloActual;
            cicloActual = doWhileStmnt;

            match("do");
            Sentence stmnt = compound_statement();
            match("while");
            match("(");
            Expr expresion = expr();
            match(")");
            match(";");

            doWhileStmnt.DoWhileInit(expresion, stmnt);
            cicloActual = cicloAnterior;

            entorno = savedEnv;
            return doWhileStmnt;
        }

        #endregion

        #region for_statement

        Sentence for_statement()
        {
            Env savedEnv = entorno;
            entorno = new Env(entorno);

            ForStatement forStmnt = new ForStatement();
            Sentence cicloAnterior = cicloActual;
            cicloActual = forStmnt;

            match("for");
            match("(");
            Sentence forInitialization = for_initialization(); 
            match(";");
            Sentence forControl = for_control(); 
            match(";");
            Sentence forIteration = for_iteration();
            match(")");

            Sentence compoundStatement = if_compound_statement();

            forStmnt.ForInit(forInitialization, forControl, forIteration, compoundStatement);
            cicloActual = cicloAnterior;

            entorno = savedEnv;
            return forStmnt;
        }

        Sentence for_initialization()
        {
            switch (currentToken.Tipo)
            {
                case TokenType.STRING:
                case TokenType.BOOL:
                case TokenType.CHAR:
                case TokenType.FLOAT:
                case TokenType.INT:
                    return declaration_statement();
                    
                
                case TokenType.ID:
                case TokenType.INCREMENT:
                case TokenType.DECREMENT:
                case TokenType.NOT:
                    return expression_statement();

                default:
                    return null;
            }
            //null
        }

        Sentence for_control()
        {
            if (peek(TokenType.INTEGER_LITERAL) || peek(TokenType.ID))
            {
                return expression_statement();
            } else 
                return null;
            //null
        }

        Sentence for_iteration()
        {
            if (peek(TokenType.INTEGER_LITERAL) || peek(TokenType.ID))
            {
                return expression_statement();
            }
            else
                return null;
            //null
        }

        #endregion

        #endregion

        #endregion

        #region constant declaration

        Sentence constant_declaration()
        {
            match("const"); 
            return variable_declaration();
        }

        #endregion        

        #region enum_declaration

        Sentence enum_declaration()
        {
            string enumName = enum_declarator();
            return enum_initializer(enumName); 
        }

        string enum_declarator()
        {
            match("enum");
            string enumName = currentToken.Lexema;
            match(TokenType.ID);            
            return enumName;
        }

        Sentence enum_initializer(string enumName)
        {
            if (peek("{"))
            {
                match("{");
                Env savedEnv = entorno;
                entorno = new Env(null);
                List<VariableDeclarator> varsDec = enum_initializer_list();
                match("}");

                EnumerationDeclaration enumDeclaration = new EnumerationDeclaration(enumName, varsDec, entorno);
                entorno = savedEnv;
                entorno.put(enumName, new Enumeracion());

                return enumDeclaration;
            }
            else
            {
                Tipo varEnum = entorno.get(enumName);
                string enumVarName = currentToken.Lexema;
                match(TokenType.ID);

                EnumerationVariableDeclaration enumVarDeclaration = new EnumerationVariableDeclaration(enumName, enumVarName, varEnum);

                return enumVarDeclaration;
            }
        }

        List<VariableDeclarator> enum_initializer_list()
        {
            List<VariableDeclarator> varDecList = new List<VariableDeclarator>();
            VariableDeclarator varDec = enum_constant_expression();
            varDecList.Add(varDec);
            enum_initializer_listP(varDecList);
            return varDecList;
        }

        void enum_initializer_listP(List<VariableDeclarator> vars)
        {
            if (peek(","))
            {
                match(",");
                VariableDeclarator varDec = enum_constant_expression();
                vars.Add(varDec);
                enum_initializer_listP(vars);
            }
            //null
        }

        VariableDeclarator enum_constant_expression()
        {
            string varName = variable_name();
            VariableInitializer varInit = enum_constant_expressionP();

            VariableSubDeclarator varSubDec = new VariableSubDeclarator(new Enumeracion(), varName);

            VariableDeclarator varDeclarator = new VariableDeclarator(varSubDec, varInit);
            return varDeclarator;
        }

        VariableInitializer enum_constant_expressionP()
        {
            if (peek("="))
            {
                match("=");
                Expr constantExpr = OR_expr();                
                VariableInitializer varInit = new VariableInitializer(constantExpr);
                return varInit;
            }
            else
                return null;
            //null
        }

        #endregion

        #region struct_declaration
        
        Sentence struct_declaration()
        {
            string strId = struct_declarator();
            return struct_declarationP(strId);
        }

        string struct_declarator()
        {
            match("struct");
            string strId = currentToken.Lexema;
            match(TokenType.ID);

            return strId;
        }

        Sentence struct_declarationP(string structName)
        {
            if (peek("{"))
            {
                match("{");                
                Env savedEnv = entorno;
                entorno = new Env(null);
                Sentence strDec = variable_declaration_list(savedEnv);
                match("}");

                Registro record = new Registro(entorno);                
                entorno = savedEnv;
                entorno.put(structName, record);
                return strDec;
            }
            else
            {
                Tipo varRecord = entorno.get(structName);
                string strVarName = currentToken.Lexema;
                match(TokenType.ID);

                entorno.put(strVarName, varRecord);
                return new StructVariableDeclaration(structName, strVarName, varRecord);
            }
        }

        Sentence variable_declaration_list(Env savedEnv)
        {
            switch (currentToken.Tipo)
            {
                case TokenType.STRING:
                case TokenType.BOOL:
                case TokenType.CHAR:
                case TokenType.FLOAT:
                case TokenType.INT:
                    Tipo t = variable_type();
                    string id = direct_variable_declarator();
                    Tipo t2 = variable_array(t);
                    entorno.put(id, t2);
                    match(";");

                    StructDeclaration strDec = new StructDeclaration();
                    
                    return variable_declaration_listP(strDec, savedEnv);
                    
                case TokenType.STRUCT:
                    string structName = struct_declarator();
                    string structVarName = currentToken.Lexema;
                    Tipo varRecord = savedEnv.get(structName);
                    match(TokenType.ID); 
                    match(";");
                    entorno.put(structVarName, varRecord);
                    StructVariableDeclaration strVarDec = new StructVariableDeclaration(structName, structVarName, varRecord);
                    return variable_declaration_listP(strVarDec, savedEnv);
                
                default:
                    throw new Exception("Error en la declaracion de variables de struct linea: " + Lexer.line + " columna: " + Lexer.column + " currenttoken = " + currentToken.Lexema);
            }
        }

        Sentence variable_declaration_listP(Sentence strDec, Env savedEnv)
        {            
            switch (currentToken.Tipo)
            {
                case TokenType.STRING:
                case TokenType.BOOL:
                case TokenType.CHAR:
                case TokenType.FLOAT:
                case TokenType.INT:
                    Tipo t = variable_type();
                    string id = direct_variable_declarator();
                    Tipo t2 = variable_array(t);
                    entorno.put(id, t2);
                    
                    match(";");

                    StructDeclaration structDec = new StructDeclaration();
                    SentenceSenquence stSeq = new SentenceSenquence(strDec, structDec);
                    return variable_declaration_listP(stSeq, savedEnv);
                
                case TokenType.STRUCT:
                    string structName = struct_declarator();
                    string structVarName = currentToken.Lexema;
                    Tipo varRecord = savedEnv.get(structName);
                    match(TokenType.ID);
                    match(";");
                    entorno.put(structVarName, varRecord);
                    StructVariableDeclaration strVarDec = new StructVariableDeclaration(structName, structVarName, varRecord);
                    SentenceSenquence stSeq2 = new SentenceSenquence(strDec, strVarDec);
                    return variable_declaration_listP(stSeq2, savedEnv);

                default:
                    return strDec;//null
            }            
        }

        #endregion
        
        #region void declaration
        
        string void_declaration()
        {
            match("void");
            string functionName = variable_name();
            return functionName;
        }
        
        #endregion

        #region expressions

        Expr expr()
        {
            Expr expresion = sequence_expr();
            //expresion.print();
            return expresion;
        }

        Expr sequence_expr()
        {
            Expr expr1 = assign_expr();
            return sequence_exprP(expr1);            
        }

        Expr sequence_exprP(Expr expr1)
        {
            if (peek(","))
            {
                match(",");
                Expr expr2 = assign_expr();
                SequenceExpr seqExpr = new SequenceExpr(expr1, expr2);
                return sequence_exprP(seqExpr);
            }
            else
                return expr1;//null
        }

        Expr assign_expr()
        {
            Expr leftExpr = OR_expr();
            return assign_exprP(leftExpr);
        }

        Expr assign_exprP(Expr id)
        {
            switch (currentToken.Tipo)
            {
                case TokenType.ASSIGNMENT:
                    match(TokenType.ASSIGNMENT);

                    Expr assignvalue = OR_expr();
                    AssignExpr assignexpr = new AssignExpr(id, assignvalue);
                    return assign_exprP(assignexpr);

                case TokenType.ADDITION_ASSIGNMENT:
                    match(TokenType.ADDITION_ASSIGNMENT);

                    Expr addassignvalue = OR_expr();
                    AdditionAssignExpr additionassignexpr = new AdditionAssignExpr(id, addassignvalue);
                    return assign_exprP(additionassignexpr);

                case TokenType.SUBSTRACTION_ASSIGNMENT:
                    match(TokenType.SUBSTRACTION_ASSIGNMENT);

                    Expr subassignvalue = OR_expr();
                    SubstractionAssignExpr substractionassignexpr = new SubstractionAssignExpr(id, subassignvalue);
                    return assign_exprP(substractionassignexpr);

                case TokenType.MULTIPLICATION_ASSIGNMENT:
                    match(TokenType.MULTIPLICATION_ASSIGNMENT);

                    Expr mulassignvalue = OR_expr();
                    MultiplicationAssignExpr multiplicationassignexpr = new MultiplicationAssignExpr(id, mulassignvalue);
                    return assign_exprP(multiplicationassignexpr);                     

                case TokenType.DIVISION_ASSIGNMENT:
                    match(TokenType.DIVISION_ASSIGNMENT);
